# libcosmic-template

./: .gitignore  Makefile  README.md  go.mod  main.go  test.bash
.github/workflows/: release.yml
data/: Cargo.toml  config.rs  justfile  localize.rs  main.rs  window.rs
dataDyn/: id.desktop
